// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings get (facility) retrieves a non-existent key 1`] = `"(no setting found)"`;

exports[`settings get (facility) retrieves a scalar 1`] = `
"value:
"test""
`;

exports[`settings get (facility) retrieves an array 1`] = `
"value:
["flower","girl"]"
`;

exports[`settings get (facility) retrieves an object 1`] = `
"value:
{"leaf":"weed","root":"root"}"
`;

exports[`settings get (global) retrieves a non-existent key 1`] = `"(no setting found)"`;

exports[`settings get (global) retrieves a scalar 1`] = `
"value:
"test""
`;

exports[`settings get (global) retrieves an array 1`] = `
"value:
["flower","girl"]"
`;

exports[`settings get (global) retrieves an object 1`] = `
"value:
{"leaf":"leaf"}"
`;

exports[`settings list (facility) shows no settings with a non-matching filter 1`] = `"No settings found"`;

exports[`settings list (facility) shows some settings with a filter 1`] = `
"test.tree.branch.leaf
test.tree.branch.root (facility only)
test.tree.flower"
`;

exports[`settings list (global) shows no settings with a non-matching filter 1`] = `"No settings found"`;

exports[`settings list (global) shows some settings with a filter 1`] = `
"test.tree.branch.leaf
test.tree.flower"
`;

exports[`settings load a KDL file preview only 1`] = `
"{
  "character": "Claire Augustus",
  "firstAppearance": 2203,
  "human": true
}"
`;

exports[`settings load a KDL file to a facility 1`] = `
"{
  "character": "Pintsize",
  "firstAppearance": 1,
  "human": false
}"
`;

exports[`settings load a KDL file to global namespace 1`] = `
"{
  "character": "Marten Reed",
  "firstAppearance": 1,
  "human": true
}"
`;

exports[`settings load a json file preview only 1`] = `
"{
  "really": {
    "dull": "eyes"
  }
}"
`;

exports[`settings load a json file to a facility 1`] = `
"{
  "really": {
    "blue": "eyes"
  }
}"
`;

exports[`settings load a json file to global namespace 1`] = `
"{
  "really": {
    "nice": "eyes"
  }
}"
`;

exports[`settings set (facility) sets a new array 1`] = `
"no current value

new value set"
`;

exports[`settings set (facility) sets a new array over a global one 1`] = `
"current value:
["flower","girl"]

new value set"
`;

exports[`settings set (facility) sets a new object 1`] = `
"no current value

new value set"
`;

exports[`settings set (facility) sets a new object over a global one 1`] = `
"current value:
{"leaf":"weed","root":"root"}

new value set"
`;

exports[`settings set (facility) sets a new scalar 1`] = `
"no current value

new value set"
`;

exports[`settings set (facility) sets a new scalar over a global one 1`] = `
"current value:
"test"

new value set"
`;

exports[`settings set (global) overwrites a scalar 1`] = `
"current value:
"test"

new value set"
`;

exports[`settings set (global) overwrites an array 1`] = `
"current value:
["flower","girl"]

new value set"
`;

exports[`settings set (global) overwrites an object 1`] = `
"current value:
{"leaf":"leaf"}

new value set"
`;

exports[`settings set (global) sets a new array 1`] = `
"no current value

new value set"
`;

exports[`settings set (global) sets a new object 1`] = `
"no current value

new value set"
`;

exports[`settings set (global) sets a new scalar 1`] = `
"no current value

new value set"
`;
